--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <style>
 
 body {
-    color: rgb(107, 142, 35);
-    background: rgb(255,20.147);
+    color: rgb(139, 0, 0);
+    background: rgb(255, 215, 0);
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
@@ -20,7 +20,7 @@ header {
 }
 
 .chamada {
-    background: rgb(233,150,122);
+    background: rgb(210, 105, 30);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
@@ -81,12 +81,12 @@ p {
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>Relatos Selvagens</h1>
-            <p>#Relatos Selvagens</p>
+            <h1>Jogador Nº1</h1>
+            <p>#ReadyPlayerOne</p>
         </div>
 
         <div>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/dZWhQMx1SO4?si=bpPJ71GoDVzrpPfM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/yulwIjJ-C4Q?si=43LM4pTZOscke6PU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
